--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/phosphor-icons"></script>
+    <link rel="icon" href="https://images.emojiterra.com/twitter/v14.0/512px/2705.png" type="image/icon type">
     <title>Daily List</title>
 </head>
 
